--- a/appinfo.json
+++ b/appinfo.json
@@ -1,36 +1,19 @@
 {
-    "versionLabel": "1.0.0",
-    "uuid": "b03f16a0-7cbb-11e3-baa7-0800200c9a66",
-    "appKeys": {
-        "dummy": 0
-    },
-    "longName": "Modern Longlife",
+    "versionLabel": "1.0",
+    "uuid": "32c87875-5422-4b8b-a5cc-7d67d102d309",
+    "appKeys": {},
+    "longName": "Modern",
     "versionCode": 1,
     "capabilities": [
         ""
     ],
-    "shortName": "Modern Longlife",
-    "companyName": "Zalew/Fowler",
+    "shortName": "Modern",
+    "companyName": "supervirusne@ya.ru",
     "watchapp": {
         "watchface": true
     },
     "resources": {
         "media": [
-            {
-                "type": "png",
-                "name": "BLUETOOTH",
-                "file": "images/bluetooth.png"
-            },
-            {
-                "type": "png",
-                "name": "BATTERY_CHARGE",
-                "file": "images/battery-charge.png"
-            },
-            {
-                "type": "png",
-                "name": "BATTERY_ICON",
-                "file": "images/battery_icon.png"
-            },
             {
                 "menuIcon": true,
                 "type": "png",
@@ -41,6 +24,21 @@
                 "type": "png",
                 "name": "IMAGE_BACKGROUND",
                 "file": "images/modern_background_new.png"
+            },
+            {
+                "type": "png",
+                "name": "BATTERY_ICON",
+                "file": "images/battery_icon.png"
+            },
+            {
+                "type": "png",
+                "name": "BATTERY_CHARGE",
+                "file": "images/battery-charge.png"
+            },
+            {
+                "type": "png",
+                "name": "BLUETOOTH",
+                "file": "images/bluetooth.png"
             }
         ]
     }
