--- a/appinfo.json
+++ b/appinfo.json
@@ -8,7 +8,7 @@
         ""
     ],
     "shortName": "Modern",
-    "companyName": "supervirusne@ya.ru",
+    "companyName": "_SvC_",
     "watchapp": {
         "watchface": true
     },
